Update ambri_install.md